clear for floats, fix hover buttons on small article cards

--- a/drupal8/web/themes/custom/curiosity/sass/base/_headings.scss
+++ b/drupal8/web/themes/custom/curiosity/sass/base/_headings.scss
@@ -13,6 +13,7 @@ h4 {
   font-family: var(--font-sans);
   font-weight: var(--semi);
   color: #4e4c56;
+  clear: both;
 }
 // * + h2 {
 //   background: red;
