--- a/drupal8/web/themes/custom/curiosity/sass/components/content/atoms/_odds-n-ends.scss
+++ b/drupal8/web/themes/custom/curiosity/sass/components/content/atoms/_odds-n-ends.scss
@@ -9,9 +9,11 @@ Descr: I know right...
 
 .align-right {
   margin-left: var(--space);
+  clear: both;
 }
 .align-left {
   margin-right: var(--space);
+  clear: both;
 }
 
 .block {
