--- a/drupal8/web/themes/custom/curiosity/sass/components/page-components/_pageComponent--relatedArticles.scss
+++ b/drupal8/web/themes/custom/curiosity/sass/components/page-components/_pageComponent--relatedArticles.scss
@@ -11,7 +11,7 @@ Descr:
   h4 {
     @extend .sr-only;
   }
-  ul {
+  > ul {
     list-style-type: none;
     padding-left: 0;
     display: flex;
